removed qualified field access in whole project, added parser for Pfam