@@ -67,68 +67,68 @@ public class Fit3DSiteAlignment implements Fit3D {
     private PsScore psScore;
 
     public Fit3DSiteAlignment(Fit3DBuilder.Builder builder) throws SubstructureSuperimpositionException {
-        this.site1 = builder.site1.getCopy();
-        this.site2 = builder.site2.getCopy();
+        site1 = builder.site1.getCopy();
+        site2 = builder.site2.getCopy();
 
-        this.containsNonAminoAcids = this.site1.getAllLeafSubstructures().stream()
+        containsNonAminoAcids = site1.getAllLeafSubstructures().stream()
                 .anyMatch(leafSubstructure -> !(leafSubstructure.getFamily() instanceof AminoAcidFamily)) ||
-                this.site1.getAllLeafSubstructures().stream()
+                site1.getAllLeafSubstructures().stream()
                         .anyMatch(leafSubstructure -> !(leafSubstructure.getFamily() instanceof AminoAcidFamily));
 
-        if (this.containsNonAminoAcids) {
+        if (containsNonAminoAcids) {
             logger.info("sites contain non-amino acid residues, no Xie and PS-scores can be calculated");
         }
 
-        this.exhaustive = builder.exhaustive;
-        this.restrictToExchanges = builder.restrictToExchanges;
+        exhaustive = builder.exhaustive;
+        restrictToExchanges = builder.restrictToExchanges;
 
         // add exchanges against arbitrary types if not restricted
-        if (!this.restrictToExchanges) {
+        if (!restrictToExchanges) {
             logger.info("specified exchanges will be ignored for the Fit3DSite alignment and matched types will be arbitrary");
         }
 
-        this.currentAlignmentSize = 2;
-        this.currentBestScore = Double.MAX_VALUE;
+        currentAlignmentSize = 2;
+        currentBestScore = Double.MAX_VALUE;
 
         logger.debug("calculating initial 2-partitions");
-        this.site1Partitions = createInitialPartitions(this.site1);
-        this.site2Partitions = createInitialPartitions(this.site2);
+        site1Partitions = createInitialPartitions(site1);
+        site2Partitions = createInitialPartitions(site2);
 
-        this.cutoffScore = builder.cutoffScore;
+        cutoffScore = builder.cutoffScore;
 
-        this.atomFilter = builder.atomFilter;
-        this.representationScheme = builder.representationScheme;
+        atomFilter = builder.atomFilter;
+        representationScheme = builder.representationScheme;
 
-        this.rmsdCutoff = builder.rmsdCutoff;
-        this.distanceTolerance = builder.distanceTolerance;
+        rmsdCutoff = builder.rmsdCutoff;
+        distanceTolerance = builder.distanceTolerance;
 
-        this.substitutionMatrix = builder.substitutionMatrix;
+        substitutionMatrix = builder.substitutionMatrix;
 
         // initialize
-        this.matches = new ArrayList<>();
+        matches = new ArrayList<>();
 
-        logger.info("computing Fit3DSite alignment for {} (size: {}) against {} (size: {}) with cutoff score {}", this.site1,
-                this.site1.size(), this.site2, this.site2.size(), this.cutoffScore);
+        logger.info("computing Fit3DSite alignment for {} (size: {}) against {} (size: {}) with cutoff score {}", site1,
+                site1.size(), site2, site2.size(), cutoffScore);
 
         calculateSimilarities();
         extendAlignment();
 
-        Collections.sort(this.matches);
+        Collections.sort(matches);
     }
 
     @Override
     public PsScore getPsScore() {
-        return this.psScore;
+        return psScore;
     }
 
     @Override
     public XieScore getXieScore() {
-        return this.xieScore;
+        return xieScore;
     }
 
     @Override
     public String getAlignmentString() {
-        return this.alignmentString;
+        return alignmentString;
     }
 
     /**
@@ -137,25 +137,25 @@ public class Fit3DSiteAlignment implements Fit3D {
     private void extendAlignment() {
 
         // iteratively extend alignment
-        while (this.currentBestScore <= this.cutoffScore) {
+        while (currentBestScore <= cutoffScore) {
             // terminate if one site is fully aligned
-            if (this.site1.size() == this.currentAlignmentSize || this.site2.size() == this.currentAlignmentSize) {
-                logger.info("alignment fully terminated after {} iterations", this.currentAlignmentSize);
+            if (site1.size() == currentAlignmentSize || site2.size() == currentAlignmentSize) {
+                logger.info("alignment fully terminated after {} iterations", currentAlignmentSize);
                 break;
             }
             // extent site partitions
             extendPartitions();
             // recalculate similarities
             calculateSimilarities();
-            if (this.cutoffScoreReached) {
-                logger.info("alignment reached cutoff score of {}", this.cutoffScore);
+            if (cutoffScoreReached) {
+                logger.info("alignment reached cutoff score of {}", cutoffScore);
                 break;
             }
         }
 
-        if (this.currentBestSuperimposition != null) {
-            this.matches.add(Fit3DMatch.of(this.currentBestScore, this.currentBestSuperimposition));
-            if (!this.containsNonAminoAcids) {
+        if (currentBestSuperimposition != null) {
+            matches.add(Fit3DMatch.of(currentBestScore, currentBestSuperimposition));
+            if (!containsNonAminoAcids) {
                 calculateXieScore();
                 calculatePsScore();
             }
@@ -166,15 +166,15 @@ public class Fit3DSiteAlignment implements Fit3D {
     }
 
     private void calculatePsScore() {
-        this.psScore = PsScore.of(this.currentBestSuperimposition, this.site1.getAllLeafSubstructures().size(),
-                this.site2.getAllLeafSubstructures().size());
+        psScore = PsScore.of(currentBestSuperimposition, site1.getAllLeafSubstructures().size(),
+                site2.getAllLeafSubstructures().size());
     }
 
     /**
      * Calculates the ligand binding site similarity score according to dio:10.1093/bioinformatics/btp220.
      */
     private void calculateXieScore() {
-        this.xieScore = XieScore.of(this.substitutionMatrix, this.currentBestSuperimposition);
+        xieScore = XieScore.of(substitutionMatrix, currentBestSuperimposition);
     }
 
     /**
@@ -183,29 +183,29 @@ public class Fit3DSiteAlignment implements Fit3D {
     private void outputSummary() {
         StringJoiner site1Joiner = new StringJoiner("|", "|", "|");
         StringJoiner site2Joiner = new StringJoiner("|", "|", "|");
-        for (int i = 0; i < this.currentAlignmentSize; i++) {
-            site1Joiner.add(String.format("%-7s", this.currentBestSuperimposition.getReference().get(i).toString()));
-            site2Joiner.add(String.format("%-7s", this.currentBestSuperimposition.getCandidate().get(i).toString()));
+        for (int i = 0; i < currentAlignmentSize; i++) {
+            site1Joiner.add(String.format("%-7s", currentBestSuperimposition.getReference().get(i).toString()));
+            site2Joiner.add(String.format("%-7s", currentBestSuperimposition.getCandidate().get(i).toString()));
         }
-        this.alignmentString = String.format("%-7s", "s1size") + "|" + this.site1.size() + "\n" +
-                String.format("%-7s", "s2size") + "|" + this.site2.size() + "\n" +
-                this.site1.getAllLeafSubstructures().stream()
+        alignmentString = String.format("%-7s", "s1size") + "|" + site1.size() + "\n" +
+                String.format("%-7s", "s2size") + "|" + site2.size() + "\n" +
+                site1.getAllLeafSubstructures().stream()
                         .map(LeafSubstructure::toString)
                         .map(s1 -> String.format("%-7s", s1))
                         .collect(Collectors.joining("|", String.format("%-7s", "s1") + "|", "|")) + "\n" +
-                this.site2.getAllLeafSubstructures().stream()
+                site2.getAllLeafSubstructures().stream()
                         .map(LeafSubstructure::toString)
                         .map(s1 -> String.format("%-7s", s1))
                         .collect(Collectors.joining("|", String.format("%-7s", "s2") + "|", "|")) + "\n" +
-                String.format("%-7s", "RMSD") + "|" + this.currentBestSuperimposition.getRmsd() + "\n" +
+                String.format("%-7s", "RMSD") + "|" + currentBestSuperimposition.getRmsd() + "\n" +
                 String.format("%-7s", "frac") + "|" + getAlignedResidueFraction() + "\n" +
-                String.format("%-7s", "XieS") + "|" + (this.containsNonAminoAcids ? "NaN" : getXieScore().getScore()) + "\n" +
-                String.format("%-7s", "XieExp") + "|" + (this.containsNonAminoAcids ? "NaN" : getXieScore().getSignificance()) + "\n" +
-                String.format("%-7s", "PsS") + "|" + (this.containsNonAminoAcids ? "NaN" : getPsScore().getScore()) + "\n" +
-                String.format("%-7s", "PsExp") + "|" + (this.containsNonAminoAcids ? "NaN" : getPsScore().getSignificance()) + "\n" +
+                String.format("%-7s", "XieS") + "|" + (containsNonAminoAcids ? "NaN" : getXieScore().getScore()) + "\n" +
+                String.format("%-7s", "XieExp") + "|" + (containsNonAminoAcids ? "NaN" : getXieScore().getSignificance()) + "\n" +
+                String.format("%-7s", "PsS") + "|" + (containsNonAminoAcids ? "NaN" : getPsScore().getScore()) + "\n" +
+                String.format("%-7s", "PsExp") + "|" + (containsNonAminoAcids ? "NaN" : getPsScore().getSignificance()) + "\n" +
                 String.format("%-7s", "s1algn") + site1Joiner.toString() + "\n" + String.format("%-7s", "s2algn") + site2Joiner.toString();
         logger.info("aligned {} residues (site 1 contains {} residues and site 2 contains {} residues)\n{}",
-                this.currentAlignmentSize, this.site1.size(), this.site2.size(), this.alignmentString);
+                currentAlignmentSize, site1.size(), site2.size(), alignmentString);
     }
 
     /**
@@ -214,8 +214,8 @@ public class Fit3DSiteAlignment implements Fit3D {
      * @return The fraction of aligned residues.
      */
     private double getAlignedResidueFraction() {
-        return (this.site1.size() > this.site2.size() ? this.currentAlignmentSize /
-                (double) this.site2.size() : this.currentAlignmentSize / (double) this.site1.size());
+        return (site1.size() > site2.size() ? currentAlignmentSize /
+                (double) site2.size() : currentAlignmentSize / (double) site1.size());
     }
 
     /**
@@ -224,44 +224,44 @@ public class Fit3DSiteAlignment implements Fit3D {
     private void extendPartitions() {
 
         // increment counter for current size of alignment
-        this.currentAlignmentSize++;
+        currentAlignmentSize++;
 
         // remove all old partitions
-        this.site1Partitions.clear();
-        this.site2Partitions.clear();
+        site1Partitions.clear();
+        site2Partitions.clear();
 
         // create new partitions
-        for (LeafSubstructure<?> leafSubstructure : this.site1.getAllLeafSubstructures()) {
+        for (LeafSubstructure<?> leafSubstructure : site1.getAllLeafSubstructures()) {
             List<LeafSubstructure<?>> site1Partition = new ArrayList<>();
-            site1Partition.addAll(this.currentBestMatchingPair.getFirst());
+            site1Partition.addAll(currentBestMatchingPair.getFirst());
             if (!site1Partition.contains(leafSubstructure)) {
                 site1Partition.add(leafSubstructure);
             }
-            if (site1Partition.size() == this.currentAlignmentSize) {
+            if (site1Partition.size() == currentAlignmentSize) {
                 // permute up to exhaustive cutoff to find ideal alignment seed
-                if (this.currentAlignmentSize <= PERMUTATION_CUTOFF && !this.exhaustive) {
+                if (currentAlignmentSize <= PERMUTATION_CUTOFF && !exhaustive) {
                     StreamPermutations.of(site1Partition.toArray(new LeafSubstructure<?>[site1Partition.size()]))
                             .map(s -> s.collect(Collectors.toList()))
-                            .forEach(this.site1Partitions::add);
+                            .forEach(site1Partitions::add);
                 } else {
-                    this.site1Partitions.add(site1Partition);
+                    site1Partitions.add(site1Partition);
                 }
             }
         }
-        for (LeafSubstructure<?> leafSubstructure : this.site2.getAllLeafSubstructures()) {
+        for (LeafSubstructure<?> leafSubstructure : site2.getAllLeafSubstructures()) {
             List<LeafSubstructure<?>> site2Partition = new ArrayList<>();
-            site2Partition.addAll(this.currentBestMatchingPair.getSecond());
+            site2Partition.addAll(currentBestMatchingPair.getSecond());
             if (!site2Partition.contains(leafSubstructure)) {
                 site2Partition.add(leafSubstructure);
             }
-            if (site2Partition.size() == this.currentAlignmentSize) {
+            if (site2Partition.size() == currentAlignmentSize) {
                 // permute up to exhaustive cutoff to find ideal alignment seed
-                if (this.currentAlignmentSize <= PERMUTATION_CUTOFF && !this.exhaustive) {
+                if (currentAlignmentSize <= PERMUTATION_CUTOFF && !exhaustive) {
                     StreamPermutations.of(site2Partition.toArray(new LeafSubstructure<?>[site2Partition.size()]))
                             .map(s -> s.collect(Collectors.toList()))
-                            .forEach(this.site2Partitions::add);
+                            .forEach(site2Partitions::add);
                 } else {
-                    this.site2Partitions.add(site2Partition);
+                    site2Partitions.add(site2Partition);
                 }
             }
         }
@@ -279,50 +279,50 @@ public class Fit3DSiteAlignment implements Fit3D {
         // initialize storage for best superimposition of round
         SubstructureSuperimposition localBestSuperimposition = null;
 
-        double[][] temporarySimilarityMatrix = new double[this.site1Partitions.size()][this.site2Partitions.size()];
+        double[][] temporarySimilarityMatrix = new double[site1Partitions.size()][site2Partitions.size()];
 
         List<List<LeafSubstructure<?>>> rowLabels = new ArrayList<>();
         List<List<LeafSubstructure<?>>> columnLabels = new ArrayList<>();
         int i = 0;
-        for (List<LeafSubstructure<?>> site1Partition : this.site1Partitions) {
+        for (List<LeafSubstructure<?>> site1Partition : site1Partitions) {
             rowLabels.add(site1Partition);
             int j = 0;
-            for (List<LeafSubstructure<?>> site2Partition : this.site2Partitions) {
+            for (List<LeafSubstructure<?>> site2Partition : site2Partitions) {
                 if (!columnLabels.contains(site2Partition)) {
                     columnLabels.add(site2Partition);
                 }
 
                 // use Fit3D if exchanges should be considered, otherwise use exhaustive alignment
-                if (this.restrictToExchanges) {
+                if (restrictToExchanges) {
                     // align the subset of sites with Fit3D
-                    StructuralMotif query = this.site1.getCopy();
-                    List<LeafSubstructure> queryLeavesToBeRemoved = this.site1.getAllLeafSubstructures().stream()
+                    StructuralMotif query = site1.getCopy();
+                    List<LeafSubstructure> queryLeavesToBeRemoved = site1.getAllLeafSubstructures().stream()
                             .filter(leafSubstructure -> !site1Partition.contains(leafSubstructure))
                             .collect(Collectors.toList());
                     queryLeavesToBeRemoved.forEach(leafSubstructure -> query.removeLeafSubstructure(leafSubstructure.getIdentifier()));
-                    StructuralMotif target = this.site2.getCopy();
-                    List<LeafSubstructure> targetLeavesToBeRemoved = this.site2.getAllLeafSubstructures().stream()
+                    StructuralMotif target = site2.getCopy();
+                    List<LeafSubstructure> targetLeavesToBeRemoved = site2.getAllLeafSubstructures().stream()
                             .filter(leafSubstructure -> !site2Partition.contains(leafSubstructure))
                             .collect(Collectors.toList());
                     targetLeavesToBeRemoved.forEach(target::removeLeafSubstructure);
 
                     // configure Fit3D
                     Fit3D fit3d;
-                    if (this.representationScheme != null) {
+                    if (representationScheme != null) {
                         fit3d = Fit3DBuilder.create()
                                 .query(query)
                                 .target(target)
-                                .representationScheme(this.representationScheme.getType())
-                                .rmsdCutoff(this.rmsdCutoff)
-                                .distanceTolerance(this.distanceTolerance)
+                                .representationScheme(representationScheme.getType())
+                                .rmsdCutoff(rmsdCutoff)
+                                .distanceTolerance(distanceTolerance)
                                 .run();
                     } else {
                         fit3d = Fit3DBuilder.create()
                                 .query(query)
                                 .target(target)
-                                .atomFilter(this.atomFilter)
-                                .rmsdCutoff(this.rmsdCutoff)
-                                .distanceTolerance(this.distanceTolerance)
+                                .atomFilter(atomFilter)
+                                .rmsdCutoff(rmsdCutoff)
+                                .distanceTolerance(distanceTolerance)
                                 .run();
                     }
 
@@ -341,21 +341,21 @@ public class Fit3DSiteAlignment implements Fit3D {
                     }
                 } else {
                     SubstructureSuperimposition superimposition;
-                    if (this.representationScheme != null) {
-                        if (this.exhaustive) {
+                    if (representationScheme != null) {
+                        if (exhaustive) {
                             superimposition = SubstructureSuperimposer
-                                    .calculateIdealSubstructureSuperimposition(site1Partition, site2Partition, this.representationScheme);
+                                    .calculateIdealSubstructureSuperimposition(site1Partition, site2Partition, representationScheme);
                         } else {
                             superimposition = SubstructureSuperimposer
-                                    .calculateSubstructureSuperimposition(site1Partition, site2Partition, this.representationScheme);
+                                    .calculateSubstructureSuperimposition(site1Partition, site2Partition, representationScheme);
                         }
                     } else {
-                        if (this.exhaustive) {
+                        if (exhaustive) {
                             superimposition = SubstructureSuperimposer
-                                    .calculateIdealSubstructureSuperimposition(site1Partition, site2Partition, this.atomFilter);
+                                    .calculateIdealSubstructureSuperimposition(site1Partition, site2Partition, atomFilter);
                         } else {
                             superimposition = SubstructureSuperimposer
-                                    .calculateSubstructureSuperimposition(site1Partition, site2Partition, this.atomFilter);
+                                    .calculateSubstructureSuperimposition(site1Partition, site2Partition, atomFilter);
                         }
                     }
                     double rmsd = superimposition.getRmsd();
@@ -370,37 +370,37 @@ public class Fit3DSiteAlignment implements Fit3D {
             i++;
         }
 
-        this.currentSimilarityMatrix = new LabeledRegularMatrix<>(temporarySimilarityMatrix);
-        this.currentSimilarityMatrix.setRowLabels(rowLabels);
-        this.currentSimilarityMatrix.setColumnLabels(columnLabels);
+        currentSimilarityMatrix = new LabeledRegularMatrix<>(temporarySimilarityMatrix);
+        currentSimilarityMatrix.setRowLabels(rowLabels);
+        currentSimilarityMatrix.setColumnLabels(columnLabels);
 
-        logger.debug("current similarity matrix is \n{}", this.currentSimilarityMatrix.getStringRepresentation());
+        logger.debug("current similarity matrix is \n{}", currentSimilarityMatrix.getStringRepresentation());
 
         // if the minimal element is ambiguous select the first
-        List<Pair<Integer>> minimalScores = Matrices.getPositionsOfMinimalElement(this.currentSimilarityMatrix);
+        List<Pair<Integer>> minimalScores = Matrices.getPositionsOfMinimalElement(currentSimilarityMatrix);
         if (!minimalScores.isEmpty()) {
-            List<LeafSubstructure<?>> first = this.currentSimilarityMatrix.getRowLabel(minimalScores.get(0).getFirst());
-            List<LeafSubstructure<?>> second = this.currentSimilarityMatrix.getColumnLabel(minimalScores.get(0).getSecond());
+            List<LeafSubstructure<?>> first = currentSimilarityMatrix.getRowLabel(minimalScores.get(0).getFirst());
+            List<LeafSubstructure<?>> second = currentSimilarityMatrix.getColumnLabel(minimalScores.get(0).getSecond());
             // if the alignment terminates in the next round do not set new best matching pair and score
-            double scoreValue = this.currentSimilarityMatrix.getValueFromPosition(minimalScores.get(0));
-            if (scoreValue > this.cutoffScore) {
+            double scoreValue = currentSimilarityMatrix.getValueFromPosition(minimalScores.get(0));
+            if (scoreValue > cutoffScore) {
                 logger.info("cutoff score exceeded");
-                this.currentAlignmentSize--;
-                this.cutoffScoreReached = true;
+                currentAlignmentSize--;
+                cutoffScoreReached = true;
                 return;
             }
-            this.currentBestMatchingPair = new Pair<>(first, second);
-            this.currentBestScore = scoreValue;
-            this.currentBestSuperimposition = localBestSuperimposition;
-            logger.info("current best matching pair of size {} is {} with RMSD {}", this.currentAlignmentSize,
-                    this.currentBestMatchingPair, this.currentBestScore);
+            currentBestMatchingPair = new Pair<>(first, second);
+            currentBestScore = scoreValue;
+            currentBestSuperimposition = localBestSuperimposition;
+            logger.info("current best matching pair of size {} is {} with RMSD {}", currentAlignmentSize,
+                    currentBestMatchingPair, currentBestScore);
         } else {
-            if (this.currentAlignmentSize == 2) {
+            if (currentAlignmentSize == 2) {
                 throw new Fit3DException("could not find minimal agreement of partitions in first iteration");
             }
-            logger.info("no suitable alignment found in iteration {}", this.currentAlignmentSize);
-            this.currentAlignmentSize--;
-            this.currentBestScore = Double.MAX_VALUE;
+            logger.info("no suitable alignment found in iteration {}", currentAlignmentSize);
+            currentAlignmentSize--;
+            currentBestScore = Double.MAX_VALUE;
         }
     }
 
@@ -419,7 +419,7 @@ public class Fit3DSiteAlignment implements Fit3D {
                 partition1.add(leafSubstructures.get(i));
                 partition1.add(leafSubstructures.get(j));
                 partitions.add(partition1);
-                if (!this.exhaustive) {
+                if (!exhaustive) {
                     // add first permutation of elements
                     List<LeafSubstructure<?>> partition2 = new ArrayList<>();
                     partition2.add(leafSubstructures.get(j));
@@ -433,27 +433,27 @@ public class Fit3DSiteAlignment implements Fit3D {
 
     @Override
     public void writeMatches(Path outputDirectory) {
-        if (this.matches.isEmpty()) {
+        if (matches.isEmpty()) {
             throw new Fit3DException("cannot write matches as they are currently empty");
         }
-        SubstructureSuperimposition bestSuperimposition = this.matches.get(0).getSubstructureSuperimposition();
-        List<LeafSubstructure<?>> mappedSite2 = bestSuperimposition.applyTo(this.site2.getCopy().getAllLeafSubstructures());
+        SubstructureSuperimposition bestSuperimposition = matches.get(0).getSubstructureSuperimposition();
+        List<LeafSubstructure<?>> mappedSite2 = bestSuperimposition.applyTo(site2.getCopy().getAllLeafSubstructures());
         try {
-            StructureWriter.writeLeafSubstructures(this.site1.getAllLeafSubstructures(),
-                    outputDirectory.resolve(this.site1.getAllLeafSubstructures().stream()
+            StructureWriter.writeLeafSubstructures(site1.getAllLeafSubstructures(),
+                    outputDirectory.resolve(site1.getAllLeafSubstructures().stream()
                             .sorted(Comparator.comparing(LeafSubstructure::getIdentifier))
                             .map(leafSubstructure -> leafSubstructure.getChainIdentifier() + "-"
                                     + leafSubstructure.getIdentifier().getSerial())
                             .collect(Collectors.joining("_", bestSuperimposition.getFormattedRmsd() + "_"
-                                    + this.site1.getAllLeafSubstructures().get(0).getPdbIdentifier()
+                                    + site1.getAllLeafSubstructures().get(0).getPdbIdentifier()
                                     + "|", "")) + "_site1.pdb"));
             StructureWriter.writeLeafSubstructures(mappedSite2,
-                    outputDirectory.resolve(this.site2.getAllLeafSubstructures().stream()
+                    outputDirectory.resolve(site2.getAllLeafSubstructures().stream()
                             .sorted(Comparator.comparing(LeafSubstructure::getIdentifier))
                             .map(leafSubstructure -> leafSubstructure.getChainIdentifier() + "-"
                                     + leafSubstructure.getIdentifier().getSerial())
                             .collect(Collectors.joining("_", bestSuperimposition.getFormattedRmsd() + "_"
-                                    + this.site2.getAllLeafSubstructures().get(0).getPdbIdentifier()
+                                    + site2.getAllLeafSubstructures().get(0).getPdbIdentifier()
                                     + "_", "")) + "_site2.pdb"));
         } catch (IOException e) {
             logger.error("error writing Fit3DSite results", e);
@@ -462,7 +462,7 @@ public class Fit3DSiteAlignment implements Fit3D {
 
     @Override
     public List<Fit3DMatch> getMatches() {
-        return this.matches;
+        return matches;
     }
 
     /**
